remove vis-timeline groups

--- a/caves.html
+++ b/caves.html
@@ -47,9 +47,9 @@
       padding: 0;
     }
 
-    .vis-t {
-      height: 100px;
-    }
+    /* .vis-t {
+      height: 400px;
+    } */
 
     .time-slider {
       width: 100%;
