--- a/histogram.html
+++ b/histogram.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>Western Ghats Caves</title>
+  <title>British Library projects</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin="" />
   <link href="./leaflet.timeline.css" rel="stylesheet" type="text/css" />
   <script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js" integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og==" crossorigin=""></script>
@@ -81,7 +81,7 @@
     var map = L.map('map', {
       layers: [osm],
       center: new L.LatLng(18.3, 73.5),
-      zoom: 8
+      zoom: 2
     });
     var timeline;
     var timelineControl;
@@ -99,6 +99,7 @@
         waitToUpdateMap: true,
         onEachFeature: function(feature, layer) {
           layer.bindTooltip(feature.properties.name);
+
         }
       });
 
@@ -115,12 +116,12 @@
       timeline.addTo(map);
       timelineControl.addTo(map);
       timelineControl.addTimelines(timeline);
-      createVisTimeline(data, 'horizontal');
+      createVisTimeline(data, 'histogram');
     }
 
   </script>
-  <script src="./data/west_ghats_t.geojson"></script>
-  <!-- <script src="./data/BL_EAP.json"></script> -->
+  <!-- <script src="./data/BL_Klokan_zoomify.json"></script> -->
+  <script src="./data/BL_EAP.json"></script>
 </body>
 
 </html>
