Index point to EAP json

--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
     }
 
   </script>
-  <script src="./data/west_ghats_t.geojson"></script>
-  <!-- <script src="./data/BL_EAP.json"></script> -->
+  <!-- <script src="./data/west_ghats_t.geojson"></script> -->
+  <script src="./data/BL_EAP.json"></script>
 </body>
 
 </html>
