georeferencer map vectors working

--- a/georeferencer.html
+++ b/georeferencer.html
@@ -120,8 +120,7 @@
     }
 
   </script>
-  <!-- <script src="./data/BL_Klokan_zoomify.json"></script> -->
-  <script src="./data/BL_EAP.json"></script>
+  <script src="./data/BL_Klokan_zoomify.json"></script>
 </body>
 
 </html>
