add end to bars

--- a/georeferencer.html
+++ b/georeferencer.html
@@ -100,7 +100,7 @@
         onEachFeature: function(feature, layer) {
           layer.bindTooltip(feature.properties.name);
           if (feature.properties.link) layer.bindPopup('Click here <a href="' + feature.properties.link + '">' + feature.properties.link + '</a>' );
-
+          if (feature.properties.institution) layer.bindPopup(feature.properties.institution);
         }
       });
 
