--- a/georeferencer.html
+++ b/georeferencer.html
@@ -98,7 +98,7 @@
         },
         waitToUpdateMap: true,
         onEachFeature: function(feature, layer) {
-          layer.bindTooltip(feature.properties.name);
+          if (feature.properties.name) layer.bindTooltip(feature.properties.name);
           if (feature.properties.link) layer.bindPopup('Click here <a href="' + feature.properties.link + '">' + feature.properties.link + '</a>' );
           if (feature.properties.institution) layer.bindPopup(feature.properties.institution);
         }
@@ -121,7 +121,8 @@
     }
 
   </script>
-  <script src="./data/BL_Klokan_zoomify.json"></script>
+  <!-- <script src="./data/BL_Klokan_zoomify.json"></script> -->
+  <script src="./data/nomisma.geojson"></script>
 </body>
 
 </html>
