switch georeferencer.html for gh-pages

--- a/georeferencer.html
+++ b/georeferencer.html
@@ -121,8 +121,8 @@
     }
 
   </script>
-  <!-- <script src="./data/BL_Klokan_zoomify.json"></script> -->
-  <script src="./data/nomisma.geojson"></script>
+  <script src="./data/BL_Klokan_zoomify.json"></script>
+  <!-- <script src="./data/nomisma_positive.geojson"></script> -->
 </body>
 
 </html>
