add UTCfullyear dates to fix nomisma

--- a/georeferencer.html
+++ b/georeferencer.html
@@ -10,7 +10,6 @@
   <script src="./TimelineSliderControl.js"></script>
   <script src="./VisTimeline.js"></script>
   <script src="./moment.min.js"></script>
-  <!-- <script src="https://d3js.org/d3.v3.min.js"></script> -->
   <link href="./vis-timeline-graph2d.min.css" rel="stylesheet" type="text/css" />
   <script src="./vis-timeline-graph2d.min.js"></script>
 
@@ -126,8 +125,9 @@
     }
 
   </script>
-  <script src="./data/BL_Klokan_zoomify.json"></script>
-  <!-- <script src="./data/nomisma_positive.geojson"></script> -->
+  <!-- <script src="./data/BL_Klokan_zoomify.json"></script> -->
+  <script src="./data/nomisma_positive.geojson"></script>
+  <!-- <script src="./data/nomisma_orig.geojson"></script> -->
 </body>
 
 </html>
