fix histogram for BC dates

--- a/georeferencer.html
+++ b/georeferencer.html
@@ -125,8 +125,8 @@
     }
 
   </script>
-  <!-- <script src="./data/BL_Klokan_zoomify.json"></script> -->
-  <script src="./data/nomisma_positive.geojson"></script>
+  <script src="./data/BL_Klokan_zoomify.json"></script>
+  <!-- <script src="./data/nomisma_positive.geojson"></script> -->
   <!-- <script src="./data/nomisma_orig.geojson"></script> -->
 </body>
 
