add nomisma html, mun min css

--- a/nomisma.html
+++ b/nomisma.html
@@ -126,8 +126,7 @@
     }
 
   </script>
-  <script src="./data/BL_Klokan_zoomify.json"></script>
-
+  <script src="./data/nomisma.geojson"></script>
 </body>
 
 </html>
