add metric graphics histogram, slider tracks svg

--- a/nomisma.html
+++ b/nomisma.html
@@ -10,9 +10,13 @@
   <script src="./TimelineSliderControl.js"></script>
   <script src="./VisTimeline.js"></script>
   <script src="./moment.min.js"></script>
-  <link href="./vis-timeline-graph2d.min.css" rel="stylesheet" type="text/css" />
+  <!-- <link href="./vis-timeline-graph2d.min.css" rel="stylesheet" type="text/css" /> -->
   <!-- <link href="./vis-timeline-graph2d.css" rel="stylesheet" type="text/css" /> -->
-  <script src="./vis-timeline-graph2d.min.js"></script>
+  <!-- <script src="./vis-timeline-graph2d.min.js"></script> -->
+  <!-- <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js'></script> -->
+  <script src="https://d3js.org/d3.v5.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/metrics-graphics/2.15.6/metricsgraphics.min.js"></script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/metrics-graphics/2.15.6/metricsgraphics.min.css">
 
   <style>
     html,
@@ -47,13 +51,6 @@
       width: 100%;
       padding: 0;
     }
-
-    /* .vis-t {
-      height: 400px;
-    } */
-    /* .vis-panel {
-      width: 10%;
-    } */
 
     .leaflet-control.leaflet-timeline-control input[type=range] {
       width: 91%;
@@ -122,8 +119,18 @@
       timeline.addTo(map);
       timelineControl.addTo(map);
       timelineControl.addTimelines(timeline);
-      createVisTimeline(data, 'histogram');
+      createVisTimeline(data, 'mg_histogram');
     }
+    window.addEventListener('resize', function(event) {
+      var elementRect = d3.select('.mg-rollover-rect').node().getBoundingClientRect();
+      viewportHeight = document.documentElement.clientHeight;
+      viewportWidth = document.documentElement.clientWidth;
+      var width = elementRect.width;
+      var bottom = viewportHeight - elementRect.bottom;
+      var right = viewportWidth - elementRect.right;
+      right = right + right * 0.1
+      d3.select(".time-slider").style("width", width + 'px').style('bottom', bottom).style('right', right)
+    }, true);
 
   </script>
   <script src="./data/nomisma.geojson"></script>
