--- a/georeferencer_mg.html
+++ b/georeferencer_mg.html
@@ -11,6 +11,7 @@
   <script src="./VisTimeline.js"></script>
   <script src="./moment.min.js"></script>
   <link href="./vis-timeline-graph2d.min.css" rel="stylesheet" type="text/css" />
+  <link href="./vis-timeline-graph2d.css" rel="stylesheet" type="text/css" />
   <script src="./vis-timeline-graph2d.min.js"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js'></script>
   <script src="https://d3js.org/d3.v5.min.js"></script>
@@ -33,12 +34,12 @@
       width: 100%;
     }
 
-    .leaflet-control-container .leaflet-timeline-controls {
+    /* .leaflet-control-container .leaflet-timeline-controls {
       box-sizing: border-box;
       width: 100%;
       margin: 0;
       margin-bottom: 15px;
-    }
+    } */
 
     table,
     th,
@@ -52,8 +53,7 @@
     }
 
     .leaflet-control.leaflet-timeline-control input[type=range] {
-      width: 91%;
-      margin-left: 9%;
+      position: fixed;
     }
 
   </style>
@@ -118,21 +118,22 @@
       timeline.addTo(map);
       timelineControl.addTo(map);
       timelineControl.addTimelines(timeline);
-      createVisTimeline(data, 'histogram');
+      createVisTimeline(data, 'mg_histogram');
     }
     window.addEventListener('resize', function(event) {
       var elementRect = d3.select('.mg-rollover-rect').node().getBoundingClientRect();
       viewportHeight = document.documentElement.clientHeight;
       viewportWidth = document.documentElement.clientWidth;
       var width = elementRect.width;
-      var bottom = viewportHeight - elementRect.bottom;
+      var bottom = viewportHeight - elementRect.bottom - (elementRect.bottom / 16);
       var right = viewportWidth - elementRect.right;
       right = right + right * 0.1
       d3.select(".time-slider").style("width", width + 'px').style('bottom', bottom).style('right', right)
     }, true);
 
   </script>
-  <script src="./data/nomisma.geojson"></script>
+  <script src="./data/BL_Klokan_zoomify.json"></script>
+
 </body>
 
 </html>
